[package]
name = "uzip"
version = "0.1.0"
edition = "2021"
exclude = ["/dist"]

[lib]
name = "uzip"
crate-type = ["cdylib"]

[dependencies]
brotli = ">=3.3.4"
miniz_oxide = ">=0.6.2"
base2048 = "^2.0.2"
zstd = { version=">=0.11.2", features=["zdict_builder", "zstdmt"] }
walkdir = ">=2.3.2"

[package.metadata.maturin]
python-source = "src-py"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module", "abi3-py39"]
