[project]
name = "uzip"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependencies]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov[all]",
    "tqdm >= 4.64.1",
    "pyzstd >= 0.15.3",
    "GitPython >= 3.1.20",
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"