[project]
name = "uzip"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "python-minifier >= 2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tqdm >= 4.64.1",
    "rich >= 12.5.1",
    "pyzstd >= 0.15.3",
    "GitPython >= 3.1.20",
]

profile = [
    "ipython",
]

[tool.maturin]
python-source = "src-py"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
